changed input to text area and fixed styles

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="cmdr.js"></script>
     <script>
         cmdr.activate();
+        cmdr.open();
     </script>
 </body>
 </html>
