--- a/index.html
+++ b/index.html
@@ -16,19 +16,13 @@
         cmdr.config.autoOpen = true;
         cmdr.config.openKey = -1;
         cmdr.config.closeKey = -1;
-
-        cmdr.setup('NAME', function () {
-            var dfd = $.Deferred();
-            cmdr.write('Name: ');
-            cmdr.readLine(function (v) {
-                cmdr.writeLine('Your name is ' + v + '.');
-                dfd.resolve();
-            });
-            return dfd;
-        });
-
+        cmdr.config.echo = false;
+        
         cmdr.activate();
-        cmdr.writeLine("cmdrjs (version " + cmdr.version + ")");
+
+        cmdr.execute("VER");
+        cmdr.execute("HELP");
+        cmdr.execute("ECHO ON");
     </script>
 </body>
 </html>
