--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <script src="dist/cmdr.js"></script>
     <script>        
-        var console = new cmdr.OverlayConsole();
+        var shell = new cmdr.OverlayShell();
     </script>
 </body>
 </html>
