--- a/dev/index.html
+++ b/dev/index.html
@@ -18,7 +18,7 @@
         
         shell.define({
             name: 'test',
-            callback: function () {
+            main: function () {
                 var defer = this.defer();
                                 
                 this.shell.write('hi there', 'success');
