--- a/dev/index.html
+++ b/dev/index.html
@@ -28,6 +28,9 @@
                 });
                 
                 return defer;
+            },
+            help: function() {
+                this.shell.writeLine('make it happen', 'success');
             }
         });
     </script>
