--- a/dev/index.html
+++ b/dev/index.html
@@ -24,7 +24,7 @@
                 this.shell.write('hi there', 'success');
                 this.shell.readLine(function() {
                     
-                    defer.resolve();
+                    defer.reject();
                 });
                 
                 return defer;
