queue fixes; remove poor paste functionality; execute improvements

--- a/dev/index.html
+++ b/dev/index.html
@@ -24,7 +24,7 @@
                 this.shell.write('hi there', 'success');
                 this.shell.readLine(function() {
                     
-                    defer.reject();
+                    defer.reject('so tired');
                 });
                 
                 return defer;
